2009-02-22  Stefan Kost  <ensonic@users.sf.net>

	* TODO:
	  Planning.

	* configure.in:
	* gtk-doc.m4:
	* gtk-doc.make:
	* gtk-doc.notmpl.make:
	* gtkdoc-mkpdf.in:
	* tests/gtk-doc.make:
	* tests/gtk-doc.notmpl.make:
	* gtkdoc-mkpdf.in (added):
	  Clean up Makefile rules (be less verbose). Added options to configure to
	  allow selecting the desired output formats. Added initial pdf support (very
	  imature yet, due to several shortcommings of fop - bugs files).

2009-02-21  Stefan Kost  <ensonic@users.sf.net>

	* TODO:
	  Planning.

	* gtkdoc-mkdb.in:
	  Update annotations and fix matching to support parameters.

	* tests/annotations/docs/tester-sections.txt:
	* tests/annotations/src/tester.c:
	* tests/annotations/src/tester.h:
	  Update annotation example and add one more.

2009-02-21  Stefan Kost  <ensonic@users.sf.net>

	* gtkdoc-mkdb.in:
	* help/manual/C/gtk-doc-manual.xml:
	* tests/gobject/src/gobject.c:
	  Allow linking to struct members. Update docs. Fixes #565126.

2009-02-21  Stefan Kost  <ensonic@users.sf.net>

	* configure.in:
	* gtkdoc-fixxref.in:
	  Fix params and running of 'highlight'.

2009-02-21  Stefan Kost  <ensonic@users.sf.net>

	* gtkdoc-mkdb.in:
	  Require the line to ends after the double-colon (sans whitespace),

2009-02-20  Stefan Kost  <ensonic@users.sf.net>

	patch by: Damien Lespiau <damien.lespiau@gmail.com>

	* gtk-doc.make:
	* gtk-doc.notmpl.make:
	* tests/gtk-doc.make:
	* tests/gtk-doc.notmpl.make:
	  Add --tag=CC to libtool invocations. Fixes #572396.

2009-02-18  Stefan Kost  <ensonic@users.sf.net>

	* examples/Makefile.am:
	  Fix example to show to to make it work even with make distcheck.

2009-02-16  Stefan Kost  <ensonic@users.sf.net>

	* style.css:
	* tests/gobject/src/gobject.c:
	  Also style <note> tags.

2009-02-10  Stefan Kost  <ensonic@users.sf.net>

	* MAINTAINERS:
	  Fix the spelling of my name.

2009-02-05  Stefan Kost  <ensonic@users.sf.net>

	* TODO:
	  Some planning.

	* gtkdoc-mkdb.in: