@@ -1,5 +1,16 @@
 2009-02-22  Stefan Kost  <ensonic@users.sf.net>
 
+	* Makefile.am:
+	  Dist more files.
+
+	* configure.in:
+	  Update status.
+
+	* gtkdoc-mkpdf.in:
+	  Remove some crack left from copy'n'paste.
+
+2009-02-22  Stefan Kost  <ensonic@users.sf.net>
+
 	* TODO:
 	  Planning.
 
